chapter 5 of typescript masterclass covering parcel, creating services and models for data fetching processes, fetching data, querying the dom, type assertions and form data completed && also created a sample project where you cant add pizza options && created a gitignore file to to prevent sendingp parcel cache to github

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^20.10.6"
+    "@types/node": "^20.10.6",
+    "parcel": "^2.11.0"
   }
 }
